--- a/app/views/populations/index.html.erb
+++ b/app/views/populations/index.html.erb
@@ -1,5 +1,2 @@
 <h1>Get your population numbers here</h1>
-<form method="get" action="<%= population_by_year_path %>">
-  <input name="year" />
-  <button type="submit">Submit</button>
-</form>
+<%= render 'form' %>
