[CH-7] Identifying log entries
The CEO wants to know what kind of results are being
spit out to users.  This is goo to know for diagnosing
any reported calculation bugs or so we know if we
need to verify the correctness of our data.

Resolves CH-7

--- a/app/views/query_logs/index.html.erb
+++ b/app/views/query_logs/index.html.erb
@@ -12,6 +12,9 @@
         Population
       </th>
       <th>
+        Query Type
+      </th>
+      <th>
         Query Executed At
       </th>
     </tr>
@@ -25,6 +28,9 @@
         </td>
         <td>
           <%= query_log.population %>
+        </td>
+        <td>
+          <%= query_log.query_type %>
         </td>
         <td>
           <%= query_log.created_at.strftime "%d/%m/%Y" %>
