[CH-8] Display most popular year queries
The CEO wants moar data.  A couple more feature requests from our logs
and I am going to point him to our data warehouse so another team can
build these dashboards.

Resolves CH-8

--- a/app/views/query_logs/index.html.erb
+++ b/app/views/query_logs/index.html.erb
@@ -1,5 +1,33 @@
 <p id="notice"><%= notice %></p>
 
+<h1>Popular Exact Queries</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>
+        Year
+      </th>
+      <th>
+        Count
+      </th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @popular_queries.each do |popular_query| %>
+      <tr>
+        <td>
+          <%= popular_query.year %>
+        </td>
+        <td>
+          <%= popular_query.kount %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
 <h1>Query Logs</h1>
 
 <table>
